--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
+    "file-get-contents": "^1.0.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
