--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "4.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.1",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^18.2.0",
     "react-scripts": "^3.0.1",
+    "react-scroll-trigger": "^0.6.14",
+    "react-scrollable-anchor": "^0.6.1",
+    "react-type-animation": "^3.2.0",
+    "react-typing-animation": "^1.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.2.9"
   }
 }
