--- a/server/package.json
+++ b/server/package.json
@@ -18,17 +18,29 @@
   "author": "sajjan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "crypto": "^1.0.1",
+    "csv-parse": "^5.5.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "faker": "^6.6.6",
     "file-get-contents": "^1.0.0",
+    "form-data": "^4.0.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "random": "^4.1.0",
+    "random-in": "^1.0.117",
     "referral-codes": "^3.0.0",
+    "request-ip": "^3.3.0",
+    "sha256": "^0.2.0",
     "socket.io": "^4.7.2",
     "system-sleep": "^1.3.7",
     "winston": "^3.11.0",
