--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "concurrently": "^8.2.2",
     "crypto": "^1.0.1",
     "csv-parse": "^5.5.2",
     "dotenv": "^16.3.1",
@@ -36,6 +37,8 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "promise": "^8.3.0",
+    "promises": "^0.2.5",
     "random": "^4.1.0",
     "random-in": "^1.0.117",
     "referral-codes": "^3.0.0",
