--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,6 @@
     "react-bootstrap": "^1.6.7",
     "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0",
     "react-scripts": "^3.0.1",
     "react-scroll-trigger": "^0.6.14",
     "react-scrollable-anchor": "^0.6.1",
@@ -46,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.2.9"
+    "@types/bootstrap": "^5.2.9",
+    "react-router-dom": "^6.18.0"
   }
 }
