--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.7",
     "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^18.2.0",
+    "react-placeholder": "^4.1.0",
     "react-scripts": "^3.0.1",
     "react-scroll-trigger": "^0.6.14",
     "react-scrollable-anchor": "^0.6.1",
